--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -13,6 +13,10 @@
                 android:title="Profil"
                 app:showAsAction="never"/>
             <item
+                android:id="@+id/itemSetting"
+                android:title="Setting"
+                app:showAsAction="never"/>
+            <item
                 android:id="@+id/itemLogout"
                 android:title="Logout"
                 app:showAsAction="never"/>
